# tt-bootcamp

./: .gitignore  pyproject.toml
week2/capstone/: analyze.ipynb  capstone(3)(1)(1).ipynb  capstone-final.ipynb
week2/friday/: READMD.md  weather.py
week2/wednesday/wedo/: New York Taxi on Duck.ipynb  New York Taxi.ipynb  spatial.sql
