[project]
name = "tt-bootcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "duckdb>=1.1.3",
    "faker>=35.0.0",
    "ipython>=8.31.0",
    "jinja2>=3.1.5",
    "jupyterlab>=4.3.5",
    "lightgbm>=4.5.0",
    "matplotlib>=3.10.0",
    "mypy>=1.14.1",
    "openmeteo-requests>=1.3.0",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "pyspark>=3.5.4",
    "requests-cache>=1.2.1",
    "retry-requests>=2.0.0",
    "ruff>=0.9.3",
    "scikit-learn>=1.6.1",
    "streamlit>=1.41.1",
    "tqdm>=4.67.1",
    "types-tqdm>=4.67.0.20241221",
]

[tool.uv.workspace]
members = ["jepython"]
